--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,17 +4,19 @@
     <title>Register</title>
 	<link rel="stylesheet" href="/css/index.css"/>
 </head>
-<body>	
-    <form action="/create" method="get"> <!-- ou method="post" -->
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required ><br><br>
-
-        <label for="document">Document:</label>
-        <input type="document" id="document" name="document" required<br><br>
-
-        <button type="submit">Send</button>
-		
-		<div th:if="${success}" class="alert alert-success" th:text="${success}"></div>
-    </form>
+<body>
+	<div class="login-container">
+	    <form action="/create" method="get"> <!-- ou method="post" -->
+	        <label for="name">Name:</label>
+	        <input type="text" id="name" name="name" required ><br><br>
+	
+	        <label for="document">Document:</label>
+	        <input type="document" id="document" name="document" required<br><br><br>
+	
+	        <button type="submit">Send</button>
+			
+			<div th:if="${success}" class="alert alert-success" th:text="${success}"></div>
+	    </form>
+	</div>div>
 </body>
 </html>
